# flutter_gemma_ev

./: .gitignore  CHANGELOG.md  pubspec.yaml
lib/core/api/: embedding_installation_builder.dart  flutter_gemma.dart  inference_installation_builder.dart
lib/core/domain/: download_exception.dart  model_source.dart
lib/core/infrastructure/: platform_file_system_service.dart
lib/core/model_management/types/: inference_model_spec.dart
lib/core/model_management/utils/: file_system_manager.dart
lib/core/utils/: file_name_utils.dart
lib/desktop/: desktop_embedding_model.dart  desktop_inference_model.dart  flutter_gemma_desktop.dart  grpc_client.dart  litertlm_bindings.dart  litertlm_native_client.dart  sentencepiece_tokenizer.dart  server_process_manager.dart
lib/mobile/: smart_downloader.dart
lib/rag/: embedding_models.dart
linux/: CMakeLists.txt
linux/scripts/: setup_desktop.sh
litertlm-server/: build.gradle.kts  settings.gradle.kts
litertlm-server/src/main/kotlin/dev/flutterberlin/litertlm/: LiteRtLmServiceImpl.kt
macos/: flutter_gemma.podspec
macos/scripts/: prepare_resources.sh  setup_desktop.sh
native/: build_litert_lm_dll.ps1  build_litert_lm_dll.sh
test/: desktop_vision_params_test.dart
windows/: CMakeLists.txt
windows/scripts/: setup_desktop.ps1
